WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104895
Regression(
r137568
): Broke layout test on EFL WK1
https://bugs.webkit.org/show_bug.cgi?id=104895
Summary
Regression(r137568): Broke layout test on EFL WK1
Gyuyoung Kim
Reported
2012-12-13 02:42:59 PST
In EFL WK1 port, there are layout test crashes after
r137568
because ewk_view.cpp has kept unused newworkInfoClient variable using OwnPtr. The
r137568
lets NetworkInfoClientEfl destroy by WebCore::NetworkInfoController.
Attachments
Patch
(1.89 KB, patch)
2012-12-13 02:46 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.90 KB, patch)
2012-12-13 02:51 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2012-12-13 02:43:57 PST
Regressions: Unexpected crashes (20) fast/dom/Document/early-document-access.html [ Crash ] fast/dom/HTMLAnchorElement/anchor-download.html [ Crash ] fast/dom/HTMLAnchorElement/anchor-no-multiple-windows.html [ Crash ] fast/dom/HTMLAnchorElement/anchor-nodownload-set.html [ Crash ] fast/dom/HTMLBaseElement/href-attribute-resolves-with-respect-to-document.html [ Crash ] fast/dom/Window/Location/set-location-after-close.html [ Crash ] fast/dom/Window/closure-access-after-navigation-window.html [ Crash ] fast/dom/Window/dom-access-from-closure-window-with-gc.html [ Crash ] fast/dom/Window/dom-access-from-closure-window.html [ Crash ] fast/dom/Window/mozilla-focus-blur.html [ Crash ] fast/dom/Window/open-invalid-url.html [ Crash ] fast/dom/location-new-window-no-crash.html [ Crash ] fast/dom/open-and-close-by-DOM.html [ Crash ] fast/dom/window-domurl-crash.html [ Crash ] http/tests/appcache/crash-when-navigating-away-then-back.html [ Crash ] http/tests/cache/history-only-cached-subresource-loads.html [ Crash ] http/tests/inspector/change-iframe-src.html [ Crash ] http/tests/inspector/compiler-script-mapping.html [ Crash ] http/tests/inspector/console-cd-completions.html [ Crash ] http/tests/inspector/console-cd.html [ Crash ]
Gyuyoung Kim
Comment 2
2012-12-13 02:46:28 PST
Created
attachment 179238
[details]
Patch
Gyuyoung Kim
Comment 3
2012-12-13 02:51:41 PST
Created
attachment 179239
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-12-13 03:29:36 PST
Comment on
attachment 179239
[details]
Patch for landing Clearing flags on attachment: 179239 Committed
r137582
: <
http://trac.webkit.org/changeset/137582
>
WebKit Review Bot
Comment 5
2012-12-13 03:29:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug