Regression(r137568): Broke layout test on EFL WK1 https://bugs.webkit.org/show_bug.cgi?id=104895

Reviewed by Kenneth Rohde Christiansen.

Fix layout test crash after r137568 because ewk_view.cpp has kept unused networkInfoClient member variable
using OwnPtr. The r137568 lets NetworkInfoClientEfl destroy by WebCore::NetworkInfoController.

* ewk/ewk_view.cpp:
(_Ewk_View_Private_Data):
(_ewk_view_priv_new):


Canonical link: https://commits.webkit.org/123127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137582 268f45cc-cd09-0410-ab3c-d52691b4dbfc